src/test/run-pass/macros/assert-eq-macro-unsized.rs
// run-pass
pub fn main() {
    assert_eq!([1, 2, 3][..], vec![1, 2, 3][..]);
}
